# forecastbox

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: bench_auto_arima.py  bench_combination.py  bench_nowcast.py  bench_pipeline.py
docs/: changelog.md  contributing.md  index.md
docs/api/: auto.md  cli.md  combination.md  core.md  datasets.md  evaluation.md  metrics.md  nowcasting.md  pipeline.md  reports.md  scenarios.md  viz.md
docs/examples/: basic_forecast.md  combination_comparison.md  forecast_monitor.md  full_experiment.md  nowcast_gdp.md  scenario_analysis.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/theory/: auto_arima.md  bates_granger.md  diebold_mariano.md  forecast_combination.md  midas.md  model_confidence_set.md  news_decomposition.md
docs/user-guide/: auto-forecast.md  cli.md  combination.md  evaluation.md  nowcasting.md  pipeline.md  scenarios.md
forecastbox/: __init__.py  _logging.py  experiment.py
forecastbox/auto/: __init__.py  _adapters.py  _baselines.py  _stepwise.py  arima.py  ets.py  select.py  var.py  zoo.py
forecastbox/cli/: __init__.py  combine_cmd.py  evaluate_cmd.py  forecast_cmd.py  main.py  monitor_cmd.py  nowcast_cmd.py
forecastbox/combination/: __init__.py  base.py  bma.py  ols.py  optimal.py  simple.py  stacking.py  time_varying.py  weighted.py
forecastbox/core/: __init__.py  config.py  forecast.py  horizon.py  results.py  vintage.py
forecastbox/cv/: __init__.py  cross_validation.py  (+1 more)
tests/: conftest.py  test_datasets.py  test_edge_cases.py  test_experiment.py  test_integration_fase7.py
validation/: validate_vs_r_fable.py  validate_vs_r_forecast.py  validate_vs_r_mcs.py
(+138 files in other folders)
